# squirrel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMIT_INFO.md  CONTRIBUTING.md  GITHUB_SETUP.md  HOW_TO_TRY_IT.md  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_RUN_WINDOWS.md  QUICK_TEST_GUIDE.md  QUICK_TEST_ML.md  README.md  TRAINING_COMPLETE.md  TRAINING_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements-pi.txt  requirements.txt  setup_venv.bat  setup_venv.sh  test_ml_detector.py
.github/workflows/: ci.yml  publish.yml
docs/: DETECTION_METHOD.md  ML_USAGE.md  RUNNING_ON_WINDOWS.md  TEST_VIDEOS.md
misc/: PAT_STORAGE.md  contract.md
scripts/: bump_version.py
src/squirrel/: __init__.py  camera.py  detector.py  detector_ml.py  gpio.py  gpio_multiclass.py  main.py  main_ml.py  utils.py
tests/: __init__.py  test_camera.py  test_detector.py  test_gpio.py  test_main.py  test_utils.py
training/: README.md  TRAINING_RESULTS.md  download_datasets.py  evaluate_model.py  generate_synthetic_dataset.py  train_yolo.py
